--- a/client/src/app/analytics/analytics.component.html
+++ b/client/src/app/analytics/analytics.component.html
@@ -109,7 +109,7 @@
                 <td class="dark-{{session.firstColor}}-border" (click)="toggleInfo($event, [user.name, user.surname, 'Получено видео'])">{{user.get_videos}}</td>
                 <td class="dark-{{session.firstColor}}-border" (click)="toggleInfo($event, [user.name, user.surname, 'Получено текстовых сообщений'])">{{user.get_text}}</td>
                 <td class="dark-{{session.firstColor}}-border" (click)="toggleInfo($event, [user.name, user.surname, 'Получено документов'])">{{user.get_documents}}</td>
-                <td class="dark-{{session.firstColor}}-border" (click)="toggleInfo($event, [user.name, user.surname, 'Получено аудиофайлов (музыка и групповые сообщения)'])">{{user.get_audios}}</td>
+                <td class="dark-{{session.firstColor}}-border" (click)="toggleInfo($event, [user.name, user.surname, 'Получено аудиофайлов (музыка и голосовые сообщения)'])">{{user.get_audios}}</td>
                 
             </tr>
             
