--- a/client/src/app/friends-page/friends-page.component.html
+++ b/client/src/app/friends-page/friends-page.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="!reloading; else reloader">
-
+    <p class="pNotAdmin" *ngIf="!users.withMessageUsers.length && !users.withoutMessageUsers.length" appEasyLang style="margin: 1vw;">Нет диалогов. Начните общаться!</p>
     <div class="box-friend" *ngFor="let user of users.withMessageUsers">
         <div class="birthday green-cursor" *ngIf="(user.birthDate | date:'MM.dd') == (today | date:'MM.dd') && session.birthdays"
         (click)="goToChat(user._id, session.defaultColor, '5f3bfe9255ba364d9f2edfac')"></div>
