--- a/client/src/app/emo-bot-page/emo-bot-page.component.html
+++ b/client/src/app/emo-bot-page/emo-bot-page.component.html
@@ -1,6 +1,6 @@
 <div class="all dark-{{session.secondColor}}-border" *ngIf="stage == 0">
      <div class="start_event dark-{{session.secondColor}}-border green-cursor" appEasyLang (click)="startEvent()">
-         СОЗДАТЬ МЕРОПРИЯТИЕ
+         {{session.levelStatus == 6 ? 'Вы не можете создавать мероприятия' : 'СОЗДАТЬ МЕРОПРИЯТИЕ'}}
      </div>
 </div>
 
