--- a/client/src/theme/style.css
+++ b/client/src/theme/style.css
@@ -135,3 +135,14 @@ audio, video {
     background-color: green;
     color: white
 }
+
+.room_video {
+    height: 300px;
+    border-radius: 1rem;
+    margin: 0.5rem;
+    width: 400px;
+    object-fit: contain;
+    transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+  }
