--- a/client/src/app/shared/layouts/people-layout/people-layout.component.html
+++ b/client/src/app/shared/layouts/people-layout/people-layout.component.html
@@ -27,6 +27,10 @@
             <img class="menuIMG dark-{{session.secondColor}}-border green-cursor" src="/images/lupa.png">
         </a>
 
+        <a routerLink="/people/videorooms" routerLinkActive="people-active" *ngIf="session.videorooms">
+            <img class="menuIMG dark-{{session.secondColor}}-border green-cursor" src="/images/videorooms.png">
+        </a>
+
         <a routerLink="/people/settings" routerLinkActive="people-active" *ngIf="session.levelStatus == 4 || session.setting != 0">
             <img class="menuIMG dark-{{session.secondColor}}-border green-cursor" src="/images/settings.jpg">
         </a>
