--- a/client/src/app/video-rooms-page/video-room-page/video-room-page.component.css
+++ b/client/src/app/video-rooms-page/video-room-page/video-room-page.component.css
@@ -237,6 +237,7 @@ video {
   border-radius: 1rem;
   margin: 0.5rem;
   width: 400px;
+  background-color: black;
   object-fit: contain;
   transform: rotateY(180deg);
   -webkit-transform: rotateY(180deg);
