--- a/client/src/theme/style.css
+++ b/client/src/theme/style.css
@@ -141,6 +141,7 @@ audio, video {
     border-radius: 1rem;
     margin: 0.5rem;
     width: 400px;
+    background-color: black;
     object-fit: contain;
     transform: rotateY(180deg);
     -webkit-transform: rotateY(180deg);
