--- a/client/src/app/users-page/users-form/users-form.component.html
+++ b/client/src/app/users-page/users-form/users-form.component.html
@@ -114,15 +114,15 @@
     <input name="time" type="radio" value="true" formControlName="time"> Да <br>
     <input name="time" type="radio" value="false" formControlName="time"> Нет <br>
 
-    <p class="in_new_user dark-{{session.firstColor}}-color">Доступена ли страница "Мероприятия":</p>
+    <p class="in_new_user dark-{{session.firstColor}}-color">Доступна ли страница "Мероприятия":</p>
     <input name="events" type="radio" value="true" formControlName="events"> Да <br>
     <input name="events" type="radio" value="false" formControlName="events"> Нет <br>
 
-    <p class="in_new_user dark-{{session.firstColor}}-color">Доступена ли страница "Игры":</p>
+    <p class="in_new_user dark-{{session.firstColor}}-color">Доступна ли страница "Игры":</p>
     <input name="games" type="radio" value="true" formControlName="games"> Да <br>
     <input name="games" type="radio" value="false" formControlName="games"> Нет <br>
 
-    <p class="in_new_user dark-{{session.firstColor}}-color">Доступена ли страница "Видео комнаты" (тестовый функционал):</p>
+    <p class="in_new_user dark-{{session.firstColor}}-color">Доступна ли страница "Видео комнаты" (тестовый функционал):</p>
     <input name="videorooms" type="radio" value="true" formControlName="videorooms"> Да <br>
     <input name="videorooms" type="radio" value="false" formControlName="videorooms"> Нет <br>
 
