--- a/client/src/app/video-rooms-page/video-room-page/video-room-page.component.css
+++ b/client/src/app/video-rooms-page/video-room-page/video-room-page.component.css
@@ -8,6 +8,7 @@
   width: 100vw;
   height: 100vh;
   background-color: #161d29;
+  overflow: hidden;
 }
 .link_container {
   position: fixed;
@@ -27,7 +28,9 @@
 
 .info_box {
   width: 600px;
+  max-width: 80vw;
   height: 200px;
+  max-height: 100%;
   background-color: #fff;
   border-radius: 10px;
   text-align: center;
@@ -41,7 +44,9 @@
 
 .link_box {
   width: 600px;
-  height: 200px;
+  height: 80vw;
+  max-width: 200px;
+  max-height: 100%;
   background-color: #fff;
   border-radius: 10px;
   text-align: center;
@@ -71,7 +76,6 @@
 }
 
 .main {
-  overflow: hidden;
   height: 92vh;
   display: flex;
 }
@@ -82,7 +86,16 @@
   flex-direction: column;
 }
 
+.main__right {
+  display: flex;
+  flex-direction: column;
+  flex: 0.3;
+  background-color: #242f41;
+}
+
 .videos__group {
+  /* flex: 1; */
+  height: calc(92vh - 2rem);
   flex-grow: 1;
   display: flex;
   justify-content: center;
@@ -92,7 +105,7 @@
   overflow: auto;
 }
 
-video {
+/* video {
   height: 300px;
   border-radius: 1rem;
   margin: 0.5rem;
@@ -101,24 +114,17 @@ video {
   transform: rotateY(180deg);
   -webkit-transform: rotateY(180deg);
   -moz-transform: rotateY(180deg);
-}
+} */
 
 .options {
   position: fixed;
   z-index: 10;
   bottom: 0;
   left: 0;
-  padding: 1rem;
+  padding: 0.1rem;
   display: flex;
   background-color: #1d2635;
-}
-
-.options__left {
-  display: flex;
-}
-
-.options__right {
-  margin-left: auto;
+  flex-direction: column;
 }
 
 .options__button {
@@ -131,24 +137,17 @@ video {
   color: #eeeeee;
   font-size: 1.2rem;
   width: 50px;
-  margin: 0 0.5rem;
+  margin: 0.1rem 0.1rem;
 }
 
 .background__red {
   background-color: #f6484a;
 }
 
-.main__right {
-  display: flex;
-  flex-direction: column;
-  flex: 0.3;
-  background-color: #242f41;
-}
-
 .main__chat_window {
   flex-grow: 1;
   overflow-y: scroll;
-  max-width: 25vw;
+  width: 95%;
 }
 
 .main__chat_window::-webkit-scrollbar {
@@ -168,7 +167,6 @@ video {
   flex: 1;
   font-size: 1rem;
   border-radius: 5px;
-  padding: 5px;
   border: none;
   resize: none;
 }
@@ -199,14 +197,16 @@ video {
 .message > span {
   background-color: #eeeeee;
   margin: 1rem 0;
-  padding: 1rem;
+  padding: calc(0.3vw + 3px);
   border-radius: 5px;
+  font-size: calc(1vw + 5px);
 }
 
 .unauth_input {
-  height: 1.1cm;
-  width: 100%;
-  font-size: 1cm;
+  height: calc(1vw + 10px);
+  width: 90%;
+  margin: auto;
+  font-size: calc(1vw + 5px);
   display: block;
   overflow: hidden;
   margin: auto;
@@ -216,7 +216,10 @@ video {
 #video-grid {
   display: flex;
   justify-content: center;
+  align-items: center;
   flex-wrap: wrap;
+  height: calc(92vh - 3rem);
+  padding-bottom: 1rem;
 }
 
 #showChat {
@@ -232,7 +235,6 @@ video {
   color: #fff;
 } */
 
-
 .tick {
   display: block;
   position: absolute;
@@ -245,7 +247,7 @@ video {
   z-index: 10;
 }
 
-@media (max-width: 700px) {
+/* @media (max-width: 700px) {
   .main__right {
     display: none;
   }
@@ -262,7 +264,7 @@ video {
   #showChat {
     display: flex;
   }
-}
+} */
 
 .link_container {
   position: fixed;
