--- a/client/src/app/video-rooms-page/video-room-page/video-room-page.component.html
+++ b/client/src/app/video-rooms-page/video-room-page/video-room-page.component.html
@@ -34,7 +34,7 @@
         <div class="messages">
             <div class="message" *ngFor="let message of messages">
                 <b><i class="far fa-user-circle"></i> <span> 
-                    {{message.sender && message.sender === session._id ? "Я" : message.senderName}}</span> </b>
+                    {{(message.user._id === session._id || message.user.id === session.id || message.user.anonimus_id === session.anonimus_id) ? "Я" : message.senderName}}</span> </b>
                 <span appEasyLang>{{message.message}}</span> 
             </div>
             <div id="forScroll"></div>
@@ -69,6 +69,13 @@
     </div>
     <div class="exit" (click)="exit()"></div>
     
+</div>
+
+<div class="info_container" *ngIf="status == 3">
+  <div class="info_box pNotAdmin">
+      <div appEasyLang>Ошибка. Вы уже подключены к этой комнате. Обновите страницу, чтобы подключиться здесь</div>
+  </div>
+  <div class="exit" (click)="exit()"></div>
 </div>
 
 <div class="link_container" *ngIf="wantCopyLink">
