--- a/client/src/app/video-rooms-page/video-room-page/video-room-page.component.html
+++ b/client/src/app/video-rooms-page/video-room-page/video-room-page.component.html
@@ -1,5 +1,6 @@
 <div *ngIf="status == 2">
 <div class="header">
+    <div class="meActive" [ngClass]="{'red': !isMeActive, 'green': isMeActive}"></div>
     <div class="logo">
       <h3>{{room.title}}</h3>
     </div>
