--- a/client/src/app/video-rooms-page/video-rooms-page.component.html
+++ b/client/src/app/video-rooms-page/video-rooms-page.component.html
@@ -15,14 +15,39 @@
         class="friendAvatar dark-{{session.firstColor}}-border green-cursor" 
         [src]="room.image ? room.image : '/images/videorooms.png'"
         (click)="goToRoom(room._id)">
+        <div class="room_author green-cursor dark-{{session.firstColor}}-border" 
+        *ngIf="room.author_ref"
+        style="background: url({{room.author_ref.photo}}); 
+        background-size: 100% 100%;
+        background-origin: border-box;
+        background-repeat: no-repeat;"
+        (click)="openZoom(room.author_ref.photo, room.title, 'Создатель ' + room.author_ref.name + ' ' + room.author_ref.surname)"> 
+        </div>
         <div class="room-online green-cursor" 
-        [ngClass]="{no_active_room: room.active == 0, active_room: room.active == 1, room_admin: session._id == room.author || session.levelStatus == 1 || session.levelStatus == 2 && room.institution == session.institution}"
+        [ngClass]="{no_active_room: room.active == 0, active_room: room.active == 1, room_admin: session._id == room.author || session.levelStatus == 1 || session.levelStatus == 2 && room.author_ref && room.author_ref.institution == session.institution}"
         (click)="editRoom(room)"> 
         </div>
         <div class="friendName tc dark-{{session.firstColor}}-border green-cursor" (click)="goToRoom(room._id)">
             <span appEasyLang>{{room.title}}</span><br>
         </div>
     </div>
+
+    <div class="box-friend">
+        <div style="padding-right: 15%; padding-left: 15%;">
+            <div class="folder" (click)="goToBin()">
+                <div class="downloads-picture green-cursor">
+                    <img class="downloads" src="/images/bin_transparent.png">
+                </div>
+                <p 
+                class="libraryName tc dark-{{session.firstColor}}-border green-cursor" 
+                appEasyLang>
+                    Корзина
+                </p>
+            </div>  
+        </div>   
+    </div>
+
+    <app-picture-zoom *ngIf="zoom" [image]="image" [text_top]="text_top" [text_bottom]="text_bottom" (result)="closeZoom($event)"></app-picture-zoom>
 
     <app-loader *ngIf="loading"></app-loader>
     <app-video-room-form *ngIf="form" [room]="currentRoom" [session]="session" (result)="closeForm($event)" (newRoom)="newRoom($event)"></app-video-room-form>
