--- a/client/src/app/shared/components/picture-zoom/picture-zoom.component.html
+++ b/client/src/app/shared/components/picture-zoom/picture-zoom.component.html
@@ -1,6 +1,12 @@
 <div class="backdrop"></div>
 
 <div class="tablo_uv">
-    <img id="ontablo_uv" [src]="image">
+    <div #top>
+        <p class="vtablo" *ngIf="text_top" appEasyLang>{{text_top}}</p>
+    </div>
+        <img class="ontablo_uv" #img [src]="image">
+    <div #bottom>
+        <p class="vtablo" appEasyLang  *ngIf="text_bottom">{{text_bottom}}</p>
+    </div>
     <div id="cross_uv" (click)="close()" class="green-cursor"></div>
 </div>
