--- a/client/src/app/shared/layouts/group-layout/group-layout.component.html
+++ b/client/src/app/shared/layouts/group-layout/group-layout.component.html
@@ -2,7 +2,7 @@
     <div class="chat light-{{session.firstColor}}-bg">
           <div id="header" class="light-{{session.secondColor}}-bg dark-{{session.secondColor}}-border">
                <img class="avatar green-cursor" id="friend" [src]="group.chatImage" (click)="openForm()">
-               <img class="avatar green-cursor" id="me" [src]="session.photo" (click)="openZoom(session.photo)">
+               <img class="avatar green-cursor" id="me" [src]="session.photo" (click)="openZoom(session.photo, session.name + ' ' + session.surname)">
           </div>
 
           <div id="section" class="light-{{session.secondColor}}-bg">
@@ -118,7 +118,7 @@
         (newMessage)="newMessageFromMe($event)"></app-group-page>
     </div>
 
-    <app-picture-zoom *ngIf="zoom" [image]="image" (result)="closeZoom($event)"></app-picture-zoom>
+    <app-picture-zoom *ngIf="zoom" [image]="image" [text_bottom]="text_bottom" (result)="closeZoom($event)"></app-picture-zoom>
     <app-delete-one-message *ngIf="deleteMessage" [letter]="deleteID" (result)="closeDeleteMessage($event)"></app-delete-one-message>
     <app-event-in-group-form *ngIf="eventForm" [group]="group" [session]="session" (result)="closeForm($event)" (newEvent)="newEvent($event)"></app-event-in-group-form>
     <ng-template appRef></ng-template>
