--- a/client/src/theme/friends.css
+++ b/client/src/theme/friends.css
@@ -9,8 +9,8 @@
 .box-friend {
     display: inline-block;
     width: 33%;
-    margin-bottom: 2.5%;
-    margin-top: 2.5%;
+    margin-bottom: 2vh;
+    margin-top: 2vh;
     z-index: 1;
     vertical-align: top;
 }
